# xrd-strain-simulation

./: .gitignore  README.md  pyproject.toml
docs/: CONSTANTS_PROVENANCE.md  CONSTANTS_PROVENANCE_GE.md  CONSTANTS_PROVENANCE_INSB.md  CONSTANTS_PROVENANCE_SI.md  CONSTANTS_SENSITIVITY.md  EXTERNAL_BENCHMARKS.md  FIG2_FORWARD.md  FIG3_CLOSURE.md  FIG3_GID_SL_BENCHMARK.md  FORMULA_AUDIT.md  GID_SL_BENCHMARK.md  GID_SL_GE_INSB_BENCHMARK.md  INSTRUMENTS.md  SCOPE_AND_GENERALIZATION.md  VALIDATION.md  XU_BENCHMARK.md  constants_audit.json  constants_sensitivity.json  fig2_forward_summary.json  fig3_gid_sl_benchmark.json  gid_sl_benchmark.json  gid_sl_ge_insb_benchmark.json  physics_acceptance.json  xrayutilities_benchmark.json
docs/images/: README.md
scripts/: audit_constants.py  benchmark_all_codes.py  benchmark_constants_sensitivity.py  benchmark_fig3_gid_sl.py  benchmark_gid_sl.py  benchmark_gid_sl_ge_insb.py  benchmark_xrayutilities.py  fig2_delay_average.py  run.py  validate_xrd_physics.py
src/xrd_strain/: __init__.py  acceptance.py  cli.py  config.py  io.py  models.py  pipeline.py  plotting.py  temporal.py
tests/: test_ge_insb_004_acceptance.py  test_si_004_acceptance.py  test_smoke.py  test_temporal.py  test_xrayutilities_benchmark.py  test_xrd_acceptance.py
tests/data/: fig3_dalembert_substrate_strain.npz  gaas004_golden.npz  gid_sl_fig3_dalembert.inp  gid_sl_ge_perfect.inp  gid_sl_ge_two_step.inp  gid_sl_ge_uniform_layer.inp  gid_sl_insb_perfect.inp  gid_sl_insb_two_step.inp  gid_sl_insb_uniform_layer.inp  gid_sl_si_perfect.inp  gid_sl_si_uniform_layer.inp  (+2 more)
(+25 files in other folders)
