[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xrd-strain-simulation"
version = "0.1.0"
description = "X-ray diffraction rocking curves from depth-dependent strain profiles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "numba",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
xrd-strain-simulation = "xrd_strain.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
